test/compile_errors/err_no_prelude_vec.w
//! args: --prelude=none
//! expect-check-fail: unknown type
fn main:
    let v: Vec[i32] = Vec.new()
